--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
@@ -87,3 +85,11 @@ dmypy.json
 .pyre/
 .pytype/
 cython_debug/
+
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
